--- a/sentimental_analysis.ipynb
+++ b/sentimental_analysis.ipynb
@@ -46,10 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "consumer_token='MBl4yHEfd7YXJdrDIXCky2tBX'\n",
-    "consumer_secret_key='xPQKjKmtWkpsedQOshjDmjV40aqcRYZnP6EQn0DpiVrBRdVNcB'\n",
-    "access_token= '1277545828111003648-Byg0rBp5X6ozwQ63rMV2nx0CtwaA0z'\n",
-    "access_token_secret= 'lsP7QQQHKR8eFsdmQrBoxQ5ledwxqZ9m8QiPWXllOIPtP'"
+    "consumer_token='\n",
+    "consumer_secret_key='\n",
+    "access_token= \n",
+    "access_token_secret= "
    ]
   },
   {
